--- a/rule4be/templates/rule4be/main.html
+++ b/rule4be/templates/rule4be/main.html
@@ -38,9 +38,9 @@
     {% block styles %}{% endblock %}
 </head>
 
-<body class="bg-white">
+<body class="bg-white {{ body_class }}">
     <main class="w-full min-h-screen flex flex-col">
-        <div id="pageContent" class="page-content__container mx-auto lg:w-[1440px] mt-5">
+        <div id="pageContent" class="page-content__container">
             {% block content %}
 
             {% endblock %}
@@ -64,5 +64,12 @@
             background-image: repeating-linear-gradient(45deg, #f0f0f0 0, #f0f0f0 0.4px, #ffffff 0, #ffffff 50%);
         }
     </style>
+    <script>
+        // $(document).ready(function () {
+        //     setTimeout(() => {
+        //         $('body').addClass('{{ body_class }}');
+        //     }, 5000);
+        // });
+    </script>
 </body>
 </html>
