--- a/users/templates/registration/password_reset_done.html
+++ b/users/templates/registration/password_reset_done.html
@@ -1,3 +1,4 @@
 {% block content %}
+<h2>Password reset - Custom Template</h2>
 <p>An email has been sent with instructions to reset your password.</p>
 {% endblock %}
