--- a/users/templates/registration/password_reset_form.html
+++ b/users/templates/registration/password_reset_form.html
@@ -1,10 +1,8 @@
 {% extends 'rule4be/main.html' %}
-{% load static %}
-
 {% block title %}Password Reset{% endblock %}
-
 {% block content %}
 <h2>Password reset</h2>
+<h2>Password reset - Custom Template</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
