--- a/users/templates/registration/password_reset_confirm.html
+++ b/users/templates/registration/password_reset_confirm.html
@@ -1,5 +1,6 @@
 {% block content %}
 <h2>Enter new password</h2>
+<h2>Password reset - Custom Template</h2>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
