Add Password Reset to Login Page

--- a/rule4be/templates/rule4be/login.html
+++ b/rule4be/templates/rule4be/login.html
@@ -45,6 +45,7 @@
                             <button class="form__submit button button--primary" type="submit">Log In</button>
                         </div>
                     </form>
+                    <a href="{% url 'password_reset' %}">Forgot your password?</a>
                 </div>
                 <div class="signup__container bg-white p-5">
                     <h2 class="form__title mx-auto">Sign Up</h2>
@@ -128,6 +129,7 @@
                             <button class="form__submit button button--primary" type="submit">Log In</button>
                         </div>
                     </form>
+                    <a href="{% url 'password_reset' %}">Forgot your password?</a>
                 </div>
                 <div class="signup__container bg-white p-5">
                     <h2 class="form__title mx-auto">Sign Up</h2>
