--- a/rule4be/templates/rule4be/login.html
+++ b/rule4be/templates/rule4be/login.html
@@ -143,7 +143,8 @@
         </div>
     </section>
     <footer class="mt-12">
-        <p>&copy; 2024 Rule4.app | Terms & Conditions | Privacy Policy</p>
+        <p>&copy; 2024 Rule4.app | <a href="{% url 'terms_and_conditions' %}">Terms & Conditions</a> | <a
+                href="{% url 'privacy_policy' %}">Privacy Policy</a></p>
     </footer>
     </div>
     {% endblock %}
