--- a/rule4be/templates/rule4be/signup.html
+++ b/rule4be/templates/rule4be/signup.html
@@ -1,28 +1,23 @@
 <!-- rule4be/signup.html -->
-<!DOCTYPE html>
-<html lang="en">
+<h2 class="form__title mx-auto">Sign Up</h2>
+<form method="post">
+    {% csrf_token %}
+    <div class="form__label-field">
+        <label class="form__label" for="username">Username:</label>
+        <input class="form__input" type="text" id="username" name="username" required>
+    </div>
 
-<head>
-    <meta charset="UTF-8">
-    <title>Sign Up</title>
-</head>
+    <div class="form__label-field">
+        <label class="form__label" for="password">Password:</label>
+        <input class="form__input" type="password" id="password" name="password" required>
+    </div>
 
-<body>
-    <h2>Sign Up</h2>
-    <form method="post">
-        {% csrf_token %}
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required><br>
+    <div class="form__label-field">
+        <label class="form__label" for="email">Email:</label>
+        <input class="form__input" type="email" id="email" name="email" required>
+    </div>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br>
-
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br>
-
-        <button type="submit">Sign Up</button>
-    </form>
-</body>
-<a href="{% url 'load_login_page' %}">Login</a>
-
-</html>
+    <button
+        class="form__submit button button--primary"
+        type="submit">Sign Up</button>
+</form>
