--- a/users/templates/users/password_reset_form.html
+++ b/users/templates/users/password_reset_form.html
@@ -1,11 +1,25 @@
-{% extends 'rule4be/main.html' %}
-{% block title %}Password Reset{% endblock %}
+
 {% block content %}
-<h2>Password reset</h2>
-<h2>Password reset - Custom Template</h2>
-<form method="post">
+<h2 class="form__title mx-auto">Password Reset</h2>
+<form
+    method="post"
+    x-data="formValidator()"
+    x-init="requiredFieldIndicator()">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Reset my password</button>
+    <div class="form__label-field">
+        <label class="form__label" for="id_email">Email:</label>
+        <input
+            class="form__intput"
+            x-model="email"
+            x-on:keyup="delayedValidateEmail"
+            type="email"
+            name="email"
+            id="id_email"
+            required>
+        <div data-invalid-feedback class="invalid-feedback" x-text="emailError"></div>
+    </div>
+    <button
+        class="form__submit button button--primary"
+        type="submit">Reset my password</button>
 </form>
 {% endblock %}
